--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12951,7 +12951,11 @@ readers do not read off random characters that represent icons */
   display: block; }
 
 sub.d-block {
-  padding-bottom: 0.75rem; }
+  padding-bottom: 0.75rem;
+  line-height: 0.333rem; }
+
+.br-0 {
+  border-radius: 0px; }
 
 .table .aqi .score {
   text-align: center;
