--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,8 @@ html
     script(src='/js/lib/jquery.min.js')
     script(src='/js/lib/popper.min.js')
     script(src='/js/lib/bootstrap.min.js')
+    script(src='/js/lib/jquery.inputmask.bundle.js')
+
     script(src='/js/main.js')
 
     script.
