--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
       .col-xl-6
         h1.h2.pb-3 Miller Beach / NWI Air Quality
 
-        p.small.text-uppercase.mb-0.text-dark Currently
+        h2.small.text-uppercase.mb-0.text-dark Currently
 
         .row.mb-3
           .col-md-6.py-2
@@ -21,9 +21,9 @@ block content
               .card-body
                 .rotate
                   i.fa.fa-signal.fa-5x
-                h6.text-uppercase PM2.5
-                h1.display-4.font-weight-bold.mb-0 #{airshit.PM25REALTIME['aqi']}
-                p.lead.mb-0.pl-2 #{airshit.PM25REALTIME['category']}
+                h3.h6.text-uppercase PM2.5
+                p.display-4.font-weight-bold.mb-0 #{airshit.PM25REALTIME['aqi']}
+                h4.lead.mb-0.pl-2 #{airshit.PM25REALTIME['category']}
 
           .col-md-6.py-2
             .card.h-100.aqi(class={
@@ -37,11 +37,11 @@ block content
               .card-body
                 .rotate
                   i.fa.fa-signal.fa-5x
-                h6.text-uppercase PM10
-                h1.display-4.font-weight-bold.mb-0 #{airshit.PM10REALTIME['aqi']}
-                p.lead.mb-0.pl-2 #{airshit.PM10REALTIME['category']}
+                h3.h6.text-uppercase PM10
+                p.display-4.font-weight-bold.mb-0 #{airshit.PM10REALTIME['aqi']}
+                h3.lead.mb-0.pl-2 #{airshit.PM10REALTIME['category']}
 
-        p.small.text-uppercase.mb-2.text-dark Historical Highs
+        h2.small.text-uppercase.mb-2.text-dark Historical Highs
 
         .row.mb-3.no-gutters
           .col-md-4.text-white
@@ -108,9 +108,9 @@ block content
 
         p.lead.font-we We track #[a(href="https://www.epa.gov/pm-pollution/particulate-matter-pm-basics#PM" role="button" target="_blank")= "PM2.5, PM10"], temperature, humidity, pressure, and reported weather (including wind speeds, direction, cloud coverage, etc.), so we can (hopefully) determine who, where, what, and how the weather affects the quality of the air we breathe, from a community-funded air sensor in the scenic Miller neighborhood of Gary, Indiana.
 
-        p.lead In the future, depending on what data is openly available, we may be able to also gather data from the many industries around the area, such as train schedules, burn schedules, traffic throughput, construction, air traffic, mill non-conformances, shipping schedules, etc.
+        p.lead In the future, depending on what data is openly available, we may be able to also gather data from the many industries around the area, such as train schedules, burn schedules, traffic congestion, construction, air traffic, mill non-conformances, shipping schedules on Lake Michigan, etc.
 
-        p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO to name a few. As soon as affordable ways of tracking this data becomes available, tracking these pollutants in our neighbourhood, we'll track it and add it to our data.
+        p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO, to name a few. As soon as affordable ways of tracking these pollutants in our neighbourhood, we'll track it and add it to our data.
 
       .col-xl-6
         div.table-responsive
