--- a/views/past.pug
+++ b/views/past.pug
@@ -134,7 +134,7 @@ block content
 
           if airshits.length === 0
             td.small.text-uppercase.text-center(colspan=17)
-              | No recorded data found.
+              | No measurements found.
 
       nav(aria-label="past navigation")
         ul.pagination.pagination-md.justify-content-center
