--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -65,8 +65,8 @@
 
 sub {
     &.d-block {
-        padding-bottom: 0.75rem;
-        line-height: 0.333rem;
+        padding-bottom: 0.25rem;
+        line-height: inherit;
     }
 }
 
