--- a/views/history-and-updates.pug
+++ b/views/history-and-updates.pug
@@ -14,17 +14,19 @@ block content
             th Change
         tbody
           tr
+            th 2019-10-21
+            td Added Flight Tracking over NWI!
+          tr
             th 2019-10-15
             td
-              | Updated 
-              a(href="https://github.com/kingsloi/community-airmonitor/commit/f1b38edcd50ecbc89c4a85791a304db30134ff2c#diff-9030a88ffb4a0007991f770d4d1feda6" target="_blank") region boundries
-              |  to better match 
-              a(href="https://en.wikipedia.org/wiki/Northwest_Indiana" target="_blank") NWI
+              | Updated the
+              a(href="https://github.com/kingsloi/community-airmonitor/commit/f1b38edcd50ecbc89c4a85791a304db30134ff2c#diff-9030a88ffb4a0007991f770d4d1feda6" target="_blank")  region boundries
+              |  to better match
+              a(href="https://en.wikipedia.org/wiki/Northwest_Indiana" target="_blank")  Northwest Indiana
               | .
-
           tr
             th 2019-10-11
-            td Cleared data. Added Southshore train tracking.
+            td Cleared data. Added SouthShore commuter train tracking, would add other tracks but no tracking exists (90% sure).
           tr
             th 2019-10-10
             td Added site
