--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,8 @@ html
     .container
       include partials/flash
 
-    block content
+    main#content
+      block content
 
     include partials/footer
 
