--- a/views/past.pug
+++ b/views/past.pug
@@ -33,9 +33,9 @@ block content
               | PM25
             th(colspan='1')
               | PM10
-            th(colspan='2')
+            th(colspan='3')
               | Region
-            th#par.span(colspan='10' scope='colgroup')
+            th#par.span(colspan='12' scope='colgroup')
               | Weather
         tbody
           tr
@@ -45,6 +45,8 @@ block content
               | Traffic #[sub.d-block=`Miles`]
             th.text-uppercase#trains(scope='col')
               | Trains #[sub.d-block=`Total`]
+            th.text-uppercase#flights(scope='col')
+              | Flights #[sub.d-block=`Total`]
             th.text-uppercase#summary(scope='col')
               | Summary
             th.text-uppercase#temp(scope='col')
@@ -52,7 +54,9 @@ block content
             th.text-uppercase#humidity(scope='col')
               | Humidity #[sub.d-block=`%`]
             th.text-uppercase#Rain(scope='col')
-              | precipIntensity #[sub.d-block=`in of liquid water per hour`]
+              | precipIntensity
+              sub.d-block
+                | in of liquid<br /> water per hour
             th.text-uppercase#pressure(scope='col')
               | Pressure #[sub.d-block=`in Hg`]
             th.text-uppercase#windspeed(scope='col')
@@ -106,6 +110,8 @@ block content
                 span.d-block.lead.text-center.mb-0 #{airshit.congestionMiles()}
               td(headers='trains')
                 span.d-block.lead.text-center.mb-0 #{airshit.trainsCount()}
+              td(headers='flights')
+                span.d-block.lead.text-center.mb-0 #{airshit.flightsCount()}
               td(headers='summary')
                 span.d-block.lead.text-center.font-weight-bold.mb-0.small #{airshit.REPORTED_WEATHER.summary}
               td(headers='temp f')
