clarification on flights

--- a/views/home.pug
+++ b/views/home.pug
@@ -208,11 +208,11 @@ block content
                   td()
                     p.lead.mb-0
                       span.separator
-                        | #{airshit.FLIGHTS.GYY.length} #[small.small.font-weight-light GYY]
+                        | #{airshit.FLIGHTS.GYY.length} #[small.small.font-weight-light to/from Gary/GYY]
                       span.separator
-                        | #{airshit.FLIGHTS.MDW.length} #[small.small.font-weight-light MDW]
+                        | #{airshit.FLIGHTS.MDW.length} #[small.small.font-weight-light to/from Midway/MDW]
                       span.separator
-                        | #{airshit.FLIGHTS.ORD.length} #[small.small.font-weight-light ORD]
+                        | #{airshit.FLIGHTS.ORD.length} #[small.small.font-weight-light to/from O'Hare/ORD]
 
             tfoot
               tr
